force-app/main/default/objects/WAC_RPT_Detail_Raw__c/WAC_RPT_Detail_Raw__c.object-meta.xml
<CustomObject>
    <description>WAC Report original detail from transaction objects, before address normalization</description>
    <label>WAC RPT Detail Raw</label>
    <nameField>
        <displayFormat>WRW{0000000000}</displayFormat>
        <label>NAME (Report Detail Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC RPT Detail Raw</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>