force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>ACCT_ID__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>ACCT ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>