force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/CUST_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUST_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>CUST NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>