force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_NO__c</fullName>
    <displayFormat>WRDR{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>DETAIL NO</label>
    <type>AutoNumber</type>
</CustomField>