force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/ENROLLTYPE__c.field-meta.xml
<CustomField>
    <fullName>ENROLLTYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ENROLLTYPE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>