force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/IS_VALID__c.field-meta.xml
<CustomField>
    <fullName>IS_VALID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS VALID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>