force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/MAILING_ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>MAILING_ADDRESS2__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MAILING ADDRESS2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>