force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/MAILING_STATE__c.field-meta.xml
<CustomField>
    <fullName>MAILING_STATE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MAILING STATE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>