force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/POST_ENROLL_VERIFY__c.field-meta.xml
<CustomField>
    <fullName>POST_ENROLL_VERIFY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POST ENROLL VERIFY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>