force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/SERVICE_ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ADDRESS2__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE ADDRESS2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>