force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/SERVICE_CITY__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_CITY__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>