force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/SERVICE_POSTAL__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_POSTAL__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE POSTAL</label>
    <length>12</length>
    <type>Text</type>
</CustomField>