force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/SERVICE_STATE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_STATE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE STATE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>