force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/SP_ID__c.field-meta.xml
<CustomField>
    <fullName>SP_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>