force-app/main/default/objects/WAC_RPT_Detail_Raw__c/fields/WAC_RPT__c.field-meta.xml
<CustomField>
    <fullName>WAC_RPT__c</fullName>
    <label>WAC RPT</label>
    <referenceTo>WAC_RPT_Header__c</referenceTo>
    <relationshipLabel>WAC RPT Detail Raw</relationshipLabel>
    <relationshipName>WAC_RPT_Detail_Raw</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>